syntax = "proto3";

option csharp_namespace = "Server";

package greet;

service Greeter {
  rpc SendKeyboardEvent (KeyboardEvent) returns (Empty);
  rpc SendMouseEvent (MouseEvent) returns (Empty);
}

message Empty{
}

message KeyboardEvent {
  int32 key = 1;
}

message MouseMoveEvent {
  int32 x = 1;
  int32 y = 2;
}

enum EventType {
  LEFTUP = 0;
  LEFTDOWN = 1;
  RIGHTUP = 2;
  RIGHTDOWN = 3;
  MOVE = 4;
}

message MouseEvent {
  int32 x = 1;
  int32 y = 2;
  EventType type = 3;
}
